example-1-query/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.lua
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.lua.v2.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  function urldecode(s)
                    s = s:gsub('+', ' ')
                        :gsub('%%(%x%x)', function(h)
                                            return string.char(tonumber(h, 16))
                                          end)
                    return s
                  end
                  function parseurl(s)
                    local ans = {}
                    for k,v in s:gmatch('([^&=?]-)=([^&=?]+)' ) do
                      ans[ k ] = urldecode(v)
                    end
                    return ans
                  end
                  local headers = request_handle:headers()
                  local path = headers:get(":path")
                  local method = headers:get(":method")
                  local query_params = parseurl(path)
                  if query_params["locale"] ~= nil and method == "GET" then
                    request_handle:headers():replace("locale",query_params["locale"])
                  end
                end
          - name: envoy.router
            typed_config: {}

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: strict_dns # static
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web_service
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
